--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@types/css": "^0.0.33",
     "@types/sass": "^1.16.1",
     "aphrodite": "^2.4.0",
-    "parcel-bundler": "^1.12.5",
+    "parcel": "^2.0.0-rc.0",
     "typescript": "^4.4.3"
   },
   "dependencies": {
@@ -15,6 +15,6 @@
     "sass": "^1.39.2"
   },
   "scripts": {
-    "build": "yarn parcel build -d ./dist -o ./index.js --no-source-maps --no-cache ./src/index.ts"
+    "build": "yarn parcel build --detailed-report --no-cache --no-source-maps --dist-dir ./dist --target ./src/index.ts"
   }
 }
