--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
   "name": "aphuckrodite",
+  "targets": {
+    "default": {
+      "includeNodeModules": true
+    }
+  },
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "license": "MIT",
   "devDependencies": {
     "@types/css": "^0.0.33",
     "@types/sass": "^1.16.1",
     "aphrodite": "^2.4.0",
-    "parcel": "^2.0.0-rc.0",
+    "esbuild": "^0.12.26",
     "typescript": "^4.4.3"
   },
   "dependencies": {
@@ -15,6 +20,6 @@
     "sass": "^1.39.2"
   },
   "scripts": {
-    "build": "yarn parcel build --detailed-report --no-cache --no-source-maps --dist-dir ./dist --target ./src/index.ts"
+    "build": "esbuild src/index.ts --bundle --metafile=esbuild.json --minify --outfile=dist/index.js --platform=node --external:fsevents --tree-shaking=ignore-annotations"
   }
 }
