--- a/package.json
+++ b/package.json
@@ -3,10 +3,22 @@
   "targets": {
     "default": {
       "includeNodeModules": true
-    }
+    },
+    "context": "browser"
+  },
+  "browser": {
+    "path": false,
+    "fs": false,
+    "url": false,
+    "readline": false,
+    "os": false,
+    "util": false,
+    "events": false,
+    "stream": false,
+    "process": false
   },
   "version": "1.0.0",
-  "main": "dist/index.js",
+  "main": "index.js",
   "license": "MIT",
   "homepage": "https://github.com/ZixiaoWang/Aphuckrodite#readme",
   "author": {
@@ -19,9 +31,14 @@
   },
   "devDependencies": {
     "@types/css": "^0.0.33",
+    "@types/react": "^17.0.20",
+    "@types/react-dom": "^17.0.9",
     "@types/sass": "^1.16.1",
     "aphrodite": "^2.4.0",
     "esbuild": "^0.12.26",
+    "parcel-bundler": "^1.12.5",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "typescript": "^4.4.3"
   },
   "dependencies": {
@@ -29,7 +46,13 @@
     "sass": "^1.39.2"
   },
   "scripts": {
-    "build": "esbuild src/index.ts --bundle --metafile=esbuild.json --minify --outfile=dist/index.js --platform=node --external:fsevents --tree-shaking=ignore-annotations"
+    "esbuild:build": "esbuild src/index.ts --bundle --metafile=esbuild.json --minify --outfile=index.js --platform=browser --external:fsevents --tree-shaking=ignore-annotations",
+    "esbuild:build:node": "esbuild src/index.ts --bundle --metafile=esbuild.node.json --minify --outfile=index.node.js --platform=node --external:fsevents --tree-shaking=ignore-annotations",
+    "esbuild:example": "esbuild example/src/index.tsx --bundle --metafile=esbuild.example.json --outfile=./example/dist/index.js --platform=browser --external:fsevents --tree-shaking=ignore-annotations --define:process.platform=\\\"darwin\\\"",
+    "build:dts": "tsc -p tsconfig.declaration.json",
+    "parcel:example": "parcel build --no-cache --no-source-maps -o index.js -d ./example ./example/index.tsx",
+    "parcel:serve": "parcel --no-cache --no-source-maps -o index.html -d ./example ./example/template.html --target browser",
+    "parcel:build": "parcel build --no-cache --no-source-maps -o index.js -d ./ ./src/index.ts --target browser --bundle-node-modules"
   },
   "licenses": [
     {
